- устранены ошибки фрагмента каталога - устранены ошибки фрагмента авторизаци

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         app:itemIconSize="@dimen/bottom_menu_icon_size"
         app:itemTextAppearanceInactive="@style/menu_item_inactive"
         app:itemTextAppearanceActive="@style/menu_item_active"
-        android:background="@color/override_transparent_color"
+        android:background="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
