--- a/catalogue_screen/src/main/res/drawable/spinner_background.xml
+++ b/catalogue_screen/src/main/res/drawable/spinner_background.xml
@@ -2,8 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <layer-list>
+
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="@color/white" />
+                </shape>
+            </item>
+
             <item android:drawable="@drawable/ic_dropdown_arrow"
                 android:gravity="center_vertical|right" />
+
         </layer-list>
     </item>
 </selector>
