--- a/catalogue_screen/src/main/res/layout/custom_spinner.xml
+++ b/catalogue_screen/src/main/res/layout/custom_spinner.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:background="@color/white"
     tools:ignore="contentDescription">
 
     <ImageView
@@ -15,6 +16,8 @@
     <Spinner
         android:id="@+id/my_spinner"
         style="@style/CustomSpinnerStyle"
+        android:popupBackground="@color/white"
+        android:paddingRight="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/sorting_options"
