- исправлена фильтрация - исправлено отображение рейтинга - заменен CheckBox на ImageView - исправлены Toggle функции

--- a/auth_screen/src/main/res/layout/fragment_authorization.xml
+++ b/auth_screen/src/main/res/layout/fragment_authorization.xml
@@ -45,7 +45,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name"
             style="@style/placeholder_text"
             android:layout_width="match_parent"
