--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:itemPaddingTop="16dp"
+        app:itemActiveIndicatorStyle="@color/override_transparent_color"
         app:labelVisibilityMode="labeled"
         app:itemIconSize="@dimen/bottom_menu_icon_size"
         app:itemTextAppearanceInactive="@style/menu_item_inactive"
         app:itemTextAppearanceActive="@style/menu_item_active"
         android:background="@color/white"
+        app:itemTextColor="@color/bottom_navigation_colors"
+        app:itemIconTint="@color/bottom_navigation_colors"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
