--- a/favourite_screen/src/main/res/layout/item_product.xml
+++ b/favourite_screen/src/main/res/layout/item_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/catalogue_item_width"
-    android:layout_height="wrap_content"
+    android:layout_height="330dp"
     android:layout_margin="7dp"
     app:cardCornerRadius="8dp"
     tools:ignore="contentDescription">
@@ -12,12 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <CheckBox
-            android:id="@+id/cb_favourite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/iv_favourite"
+            android:layout_width="@dimen/favourite_icon_size"
+            android:layout_height="@dimen/favourite_icon_size"
             android:layout_margin="@dimen/margin_6dp_small"
-            android:button="@drawable/selector_favorite"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -193,8 +192,7 @@
             app:iconPadding="0dp"
             app:iconTint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/rating_block" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
