--- a/product_card_screen/src/main/res/layout/fragment_product_detail.xml
+++ b/product_card_screen/src/main/res/layout/fragment_product_detail.xml
@@ -22,10 +22,12 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/toolbar_height">
 
                 <ImageView
+                    android:id="@+id/btn_back"
                     android:layout_width="@dimen/toolbar_icon_size"
                     android:layout_height="@dimen/toolbar_icon_size"
                     android:layout_gravity="start"
