--- a/account_profile_screen/src/main/res/layout/fragment_account_profile.xml
+++ b/account_profile_screen/src/main/res/layout/fragment_account_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="view.AccountProfileFragment"
     tools:ignore="contentDescription">
 
@@ -11,15 +12,18 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_height"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/title"
                 style="@style/title_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -35,7 +39,7 @@
         android:layout_height="@dimen/profile_info_block_height"
         android:layout_marginHorizontal="@dimen/margin_16dp_medium"
         android:layout_marginTop="@dimen/margin_24dp_large"
-        android:background="@color/background_light_grey"
+        app:cardBackgroundColor="@color/background_light_grey"
         app:cardCornerRadius="8dp"
         app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,6 +47,7 @@
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/avatar_info_constraints"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -81,6 +86,7 @@
                 app:layout_constraintStart_toEndOf="@id/avatar_icon" />
 
             <ImageButton
+                android:id="@+id/btn_logout_first"
                 android:layout_width="@dimen/exit_button_size"
                 android:layout_height="@dimen/exit_button_size"
                 android:layout_marginEnd="@dimen/margin_8dp_small"
@@ -106,7 +112,7 @@
         app:layout_constraintTop_toBottomOf="@id/avatar_info_block" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_logout"
+        android:id="@+id/btn_logout_second"
         style="@style/button_text_2"
         android:layout_width="0dp"
         android:layout_height="@dimen/logout_btn_height"
