--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -78,16 +78,14 @@
         <item name="android:lineHeight">@dimen/price_text_height</item>
     </style>
 
-    <style name="menu_item_inactive" parent="Widget.Material3.BottomNavigationView">
+    <style name="menu_item_inactive">
         <item name="android:textSize">@dimen/caption_1</item>
-        <item name="itemTextColor">@color/text_dark_grey</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
         <item name="android:lineHeight">@dimen/caption_1_height</item>
     </style>
 
-    <style name="menu_item_active" parent="Widget.Material3.BottomNavigationView">
+    <style name="menu_item_active">
         <item name="android:textSize">@dimen/caption_1</item>
-        <item name="itemTextColor">@color/text_pink</item>
         <item name="fontFamily">@font/sf_pro_display_medium</item>
         <item name="android:lineHeight">@dimen/caption_1_height</item>
     </style>
