--- a/favourite_screen/src/main/res/drawable/background_tab_layout.xml
+++ b/favourite_screen/src/main/res/drawable/background_tab_layout.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/background_light_grey"/>
-            <corners android:radius="10dp"/>
-        </shape>
-    </item>
-</selector>
+<shape android:shape="rectangle"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/background_light_grey" />
+    <corners android:radius="10dp" />
+</shape>
