--- a/favourite_screen/src/main/res/layout/fragment_favourites.xml
+++ b/favourite_screen/src/main/res/layout/fragment_favourites.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="view.FavouritesFragment"
     tools:ignore="contentDescription">
 
@@ -11,6 +12,7 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -46,13 +48,20 @@
         android:layout_marginHorizontal="@dimen/margin_16dp_medium"
         android:layout_marginTop="@dimen/margin_8dp_small"
         android:background="@drawable/background_tab_layout"
+        android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
-        app:tabBackground="@drawable/background_tab"
-        app:tabPadding="@dimen/margin_3dp_small"
+        app:tabBackground="@drawable/selector_tab"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@android:color/transparent"
+        app:tabIndicatorHeight="0dp"
+        app:tabMode="fixed"
+        app:tabRippleColor="@null"
         app:tabSelectedTextAppearance="@style/TabLayoutSelectedTextAppearance"
-        app:tabTextAppearance="@style/TabLayoutTextAppearance" />
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextAppearance="@style/TabLayoutTextAppearance"
+        app:tabTextColor="@color/text_grey" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/fragment_view_pager"
