--- a/favourite_screen/src/main/res/layout/item_product.xml
+++ b/favourite_screen/src/main/res/layout/item_product.xml
@@ -66,7 +66,7 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.test.application.core.custom_view.StrikeThroughTextView
             android:id="@+id/tv_old_price"
             style="@style/element_text"
             android:layout_width="wrap_content"
